--- a/styles.css
+++ b/styles.css
@@ -1280,7 +1280,7 @@ p, a, li, span, button {
     .hero-slogan {
       font-size: 2rem;
       letter-spacing: 1px;
-      font-family: 'Satisfy' !important;
+      font-family: 'TheSignature' !important;
 
 
 
